Do not reload the session if it is already opened, just raise the window.

kate --start session1	         (same as --use)
kate --start session1            just raise the opened session (same as --use)
kate --start session2            raise instance and open new sessoin (same as --use)
kate -n --start session3         start a new instance and open tne new session
kate -n --start session4         start a new instance and open tne new session
kate -n --start session3         raise instance of session3.

kate -n --start session3  somefile
kate  --start session3  somefile2        (same as --use)
behave the same if an instance of session3 is already opened and open the two files in that instance
if before -n only another instance, eg session2 is opened than a new instance is opened with session3

--> only one instance of one specific session possible
--> there can be more instances running, each having an own session (-n)

I think that's the most sane behaviour

BUG:202210

svn path=/trunk/KDE/kdesdk/kate/; revision=1025768